Install and Test Ceramic

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_GRAPH_URI = 'https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-subgraph'
+REACT_APP_CERAMIC_URI = 'https://gateway-clay.ceramic.network'
