--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_GRAPH_URI = 'https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-subgraph'
 REACT_APP_CERAMIC_URI = 'https://ceramic.geoweb.network'
+REACT_APP_ANNUALRATE = '0.1';
