--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "big-number": "^2.0.0",
+    "ethers": "^5.0.27",
     "graphql": "^15.5.0",
     "js-geo-web-coordinate": "^0.2.0",
     "react": "^17.0.2",
