--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_GRAPH_URI = 'https://api.thegraph.com/subgraphs/name/geo-web-project/g
 REACT_APP_CERAMIC_URI = 'https://ceramic.geoweb.network'
 REACT_APP_ANNUALRATE = 0.1
 REACT_APP_IPFS_GATEWAY = https://dweb.link/ipfs/
+REACT_APP_USE_GWS = false
