--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.13",
+    "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
     "@ceramicnetwork/http-client": "^1.0.0",
+    "@ceramicstudio/multiauth": "^0.2.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
+    "@types/react": "^17.0.47",
+    "@types/react-dom": "^18.0.6",
     "ethers": "^5.0.27",
     "graphql": "^15.5.0",
+    "ipfs-core": "^0.15.4",
+    "ipfs-provider": "^2.1.0",
     "js-geo-web-coordinate": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.3",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem react-scripts start",
+    "start": "set HTTPS=true&&set SSL_CRT_FILE=localhost.pem&&set SSL_KEY_FILE=localhost-key.pem&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
