build: add export script

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "scripts": {
     "dev": "next dev -p 3001 & local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 3000 --target 3001",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier -w src/*"
