--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@apollo/client": "^3.3.13",
     "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
+    "@ceramicnetwork/common": "^2.4.1",
     "@ceramicnetwork/http-client": "^1.0.0",
     "@ceramicnetwork/stream-tile": "^2.1.3",
     "@ceramicstudio/multiauth": "^0.2.3",
     "@geo-web/datamodels": "2.3.5",
     "@geo-web/sdk": "^1.1.2",
     "@glazed/datamodel": "^0.3.1",
+    "@glazed/did-datastore": "^0.3.2",
     "@glazed/did-session": "^0.1.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -24,7 +26,7 @@
     "bn.js": "^5.2.1",
     "caip": "^1.1.0",
     "ethers": "^5.0.27",
-    "graphql": "^15.5.0",
+    "graphql": "^15.8.0",
     "ipfs-core": "^0.15.4",
     "ipfs-provider": "^2.1.0",
     "js-geo-web-coordinate": "^0.3.7",
@@ -42,8 +44,15 @@
     "prettier": "prettier -w src/*"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
