feat!: support latest data models and testnet (#28)
* build: port to Next.js

* feat: use new data models

* style: prettify

* build: add export script

* build: use img tag instead of Next's Image

* refactor: remove unused files

* refactor: remove commented out line

* refactor: remove unused stylesheets

* refactor: remove unused file

* build: error out on invalid types

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_GRAPH_URI = 'https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-subgraph'
-REACT_APP_CERAMIC_URI = 'https://gateway.ceramic.network/'
-REACT_APP_ANNUALRATE = 0.1
-REACT_APP_IPFS_GATEWAY = https://gateway.pinata.cloud/ipfs/
-REACT_APP_USE_GWS = true
+NEXT_PUBLIC_GRAPH_URI = 'https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-optimism-kovan'
+NEXT_PUBLIC_CERAMIC_URI = 'https://gateway.ceramic.network/'
+NEXT_PUBLIC_ANNUALRATE = 0.1
+NEXT_PUBLIC_IPFS_GATEWAY = https://gateway.pinata.cloud/ipfs/
+NEXT_PUBLIC_USE_GWS = true
