--- a/package.json
+++ b/package.json
@@ -4,32 +4,44 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.13",
+    "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
+    "@ceramicnetwork/common": "^2.4.1",
     "@ceramicnetwork/http-client": "^1.0.0",
+    "@ceramicnetwork/stream-tile": "^2.1.3",
+    "@ceramicstudio/multiauth": "^0.2.3",
+    "@geo-web/datamodels": "2.3.5",
+    "@geo-web/sdk": "^1.1.2",
+    "@glazed/datamodel": "^0.3.1",
+    "@glazed/did-datastore": "^0.3.2",
+    "@glazed/did-session": "^0.1.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
+    "@types/react": "^17.0.47",
+    "@types/react-dom": "^18.0.2",
+    "bn.js": "^5.2.1",
+    "caip": "^1.1.0",
     "ethers": "^5.0.27",
-    "graphql": "^15.5.0",
-    "js-geo-web-coordinate": "^0.2.0",
+    "graphql": "^15.8.0",
+    "ipfs-core": "^0.15.4",
+    "ipfs-provider": "^2.1.0",
+    "js-geo-web-coordinate": "^0.3.7",
+    "next": "^12.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "dev": "next dev -p 3001 & local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 3000 --target 3001",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start",
+    "lint": "next lint",
+    "prettier": "prettier -w src/*"
   },
   "browserslist": {
     "production": [
@@ -38,16 +50,18 @@
       "not op_mini all"
     ],
     "development": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
   },
   "devDependencies": {
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.1"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "local-ssl-proxy": "^1.3.0"
   }
 }
