--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@glazed/did-session": "^0.1.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@orbisclub/modules": "^0.0.39",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -31,8 +32,8 @@
     "ipfs-provider": "^2.1.0",
     "js-geo-web-coordinate": "^0.3.7",
     "next": "^12.2.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
