--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@orbisclub/modules": "^0.0.40",
+    "@orbisclub/orbis-sdk": "^0.3.30",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18.0.2",
     "bn.js": "^5.2.1",
     "caip": "^1.1.0",
+    "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.0.27",
     "graphql": "^15.8.0",
     "ipfs-core": "^0.15.4",
