--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@ceramicnetwork/common": "^2.4.1",
     "@ceramicnetwork/http-client": "^1.0.0",
     "@ceramicnetwork/stream-tile": "^2.1.3",
-    "@ceramicstudio/multiauth": "^0.2.3",
     "@geo-web/datamodels": "2.3.5",
     "@geo-web/sdk": "^1.1.2",
     "@glazed/datamodel": "^0.3.1",
@@ -16,6 +15,8 @@
     "@glazed/did-session": "^0.1.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@orbisclub/modules": "^0.0.40",
+    "@orbisclub/orbis-sdk": "^0.3.30",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -25,14 +26,15 @@
     "@types/react-dom": "^18.0.2",
     "bn.js": "^5.2.1",
     "caip": "^1.1.0",
+    "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.0.27",
     "graphql": "^15.8.0",
     "ipfs-core": "^0.15.4",
     "ipfs-provider": "^2.1.0",
     "js-geo-web-coordinate": "^0.3.7",
     "next": "^12.2.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
