--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "caip": "^1.1.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.0.27",
+    "geolib": "^3.3.3",
     "graphql": "^15.8.0",
     "ipfs-core": "^0.15.4",
     "ipfs-provider": "^2.1.0",
     "next": "^12.2.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "three": "^0.146.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
