--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@ceramicnetwork/common": "^2.4.1",
     "@ceramicnetwork/http-client": "^1.0.0",
     "@ceramicnetwork/stream-tile": "^2.1.3",
+    "@geo-web/content": "^0.2.1",
     "@geo-web/datamodels": "3.1.0",
     "@geo-web/sdk": "^4.0.1",
+    "@geo-web/types": "^0.1.3",
     "@glazed/datamodel": "^0.3.1",
     "@glazed/did-datastore": "^0.3.2",
     "@glazed/did-session": "^0.1.1",
@@ -37,12 +39,12 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "dev": "next dev -p 3001 & local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 3000 --target 3001",
+    "dev": "next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier -w src/*"
+    "prettier": "prettier -w src/**"
   },
   "browserslist": {
     "production": [
