--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_CERAMIC_URI = https://ceramic-clay.geoweb.network/
 NEXT_PUBLIC_ANNUALRATE = 0.1
 NEXT_PUBLIC_IPFS_GATEWAY = https://gateway.pinata.cloud/ipfs/
 NEXT_PUBLIC_USE_GWS = true
+NEXT_PUBLIC_WEB3_STORAGE_TOKEN =
