--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "next": "^12.2.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "web3.storage": "^4.4.0"
   },
   "scripts": {
     "dev": "next dev",
