--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.0.2",
     "bn.js": "^5.2.1",
     "caip": "^1.1.0",
+    "dotenv": "^16.0.3",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.0.27",
     "graphql": "^15.8.0",
