--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "@ceramicnetwork/common": "^2.4.1",
     "@ceramicnetwork/http-client": "^1.0.0",
     "@ceramicnetwork/stream-tile": "^2.1.3",
-    "@geo-web/content": "^0.3.1",
-    "@geo-web/datamodels": "3.1.0",
+    "@geo-web/content": "^0.3.3",
     "@geo-web/sdk": "^4.2.0",
     "@geo-web/types": "^0.1.3",
     "@glazed/datamodel": "^0.3.1",
@@ -37,8 +36,7 @@
     "next": "^12.2.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^4.7.4",
-    "web3.storage": "^4.4.0"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "dev": "next dev",
