--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ethers": "^5.0.27",
     "graphql": "^15.8.0",
     "ipfs-core": "^0.15.4",
+    "ipfs-http-client": "^59.0.0",
     "ipfs-provider": "^2.1.0",
     "next": "^12.2.5",
     "react": "^18.0.0",
