perf: Fetch raw blocks instead of entire DAG (#56)
* Update to v0.3.3 @geo-web/content to fetch raw blocks

* Switch gateway

* Add env to Github actions

* Enable ipfs-http-client

--- a/.env.mainnet
+++ b/.env.mainnet
@@ -3,4 +3,5 @@ NEXT_PUBLIC_GRAPH_URI = https://api.thegraph.com/subgraphs/id/QmUaJGjcRabHM5qoCE
 NEXT_PUBLIC_CERAMIC_URI = https://ceramic.geoweb.network/
 NEXT_PUBLIC_CERAMIC_CONNECT_NETWORK = "mainnet"
 NEXT_PUBLIC_ANNUALRATE = 0.1
-NEXT_PUBLIC_IPFS_GATEWAY = https://w3s.link/ipfs/
+NEXT_PUBLIC_IPFS_GATEWAY = https://dweb.link
+NEXT_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://strn.pl
