--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "local-ssl-proxy": "^1.3.0"
+    "local-ssl-proxy": "^1.3.0",
+    "prettier": "^2.8.4"
   }
 }
