--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,7 +1,5 @@
 name: Prettier
 on: [push, pull_request]
-env:
-  APP_ENV: testnet
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -9,6 +7,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Use Node 16
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16.x
 
       - name: Prettify code
         uses: creyD/prettier_action@v4.2
