--- a/.env.mainnet
+++ b/.env.mainnet
@@ -4,4 +4,4 @@ NEXT_PUBLIC_CERAMIC_URI = https://ceramic.geoweb.network/
 NEXT_PUBLIC_CERAMIC_CONNECT_NETWORK = "mainnet"
 NEXT_PUBLIC_ANNUALRATE = 0.1
 NEXT_PUBLIC_IPFS_GATEWAY = https://w3s.link
-NEXT_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://strn.pl
+NEXT_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://w3s.link
