--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@glazed/did-session": "^0.1.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@orbisclub/modules": "^0.0.43",
-    "@orbisclub/orbis-sdk": "^0.4.3",
+    "@orbisclub/components": "^0.1.50",
     "bn.js": "^5.2.1",
     "caip": "^1.1.0",
     "dotenv": "^16.0.3",
