--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.13",
+    "@augmented-worlds/system-babylonjs": "^0.1.6",
     "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
     "@ceramicnetwork/common": "^2.4.1",
     "@ceramicnetwork/http-client": "^1.0.0",
     "@ceramicnetwork/stream-tile": "^2.1.3",
-    "@geo-web/content": "^0.5.3",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@geo-web/content": "^0.6.1",
     "@geo-web/sdk": "^4.2.0",
-    "@geo-web/types": "^0.1.3",
+    "@geo-web/types": "^0.2.0",
     "@glazed/datamodel": "^0.3.1",
     "@glazed/did-datastore": "^0.3.2",
     "@glazed/did-session": "^0.1.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@orbisclub/components": "^0.1.63",
+    "augmented-worlds": "^0.1.3",
     "bn.js": "^5.2.1",
     "caip": "^1.1.0",
     "dotenv": "^16.0.3",
