Initial work on Augmented Worlds support

--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.13",
-    "@augmented-worlds/system-babylonjs": "^0.1.6",
+    "@augmented-worlds/system-babylonjs": "^0.1.7",
     "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
     "@ceramicnetwork/common": "^2.4.1",
     "@ceramicnetwork/http-client": "^1.0.0",
     "@ceramicnetwork/stream-tile": "^2.1.3",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@geo-web/content": "^0.6.1",
     "@geo-web/sdk": "^4.2.0",
     "@geo-web/types": "^0.2.0",
@@ -23,6 +20,7 @@
     "@orbisclub/components": "^0.1.63",
     "augmented-worlds": "^0.1.3",
     "bn.js": "^5.2.1",
+    "bootstrap": "^5.2.3",
     "caip": "^1.1.0",
     "dotenv": "^16.0.3",
     "ethereum-blockies-base64": "^1.0.2",
@@ -33,8 +31,11 @@
     "ipfs-provider": "^2.1.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "typescript": "^4.7.4"
+    "sass": "^1.62.1",
+    "typescript": "^4.7.4",
+    "ua-parser-js": "^1.0.35"
   },
   "scripts": {
     "dev-https": "local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 3001 --target 3000",
@@ -68,6 +69,7 @@
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/ua-parser-js": "^0.7.36",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
