--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@orbisclub/components": "^0.1.63",
-    "augmented-worlds": "^0.1.3",
+    "augmented-worlds": "0.1.6",
     "bn.js": "^5.2.1",
     "bootstrap": "^5.2.3",
     "caip": "^1.1.0",
