--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.13",
-    "@augmented-worlds/system-babylonjs": "^0.1.7",
+    "@augmented-worlds/system-babylonjs": "^0.1.8",
     "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
     "@ceramicnetwork/common": "^2.4.1",
     "@ceramicnetwork/http-client": "^1.0.0",
@@ -18,7 +18,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@orbisclub/components": "^0.1.63",
-    "augmented-worlds": "0.1.6",
+    "augmented-worlds": "^0.1.7",
     "bn.js": "^5.2.1",
     "bootstrap": "^5.2.3",
     "caip": "^1.1.0",
