FIx image anchor start position

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@glazed/datamodel": "^0.3.1",
     "@glazed/did-datastore": "^0.3.2",
     "@glazed/did-session": "^0.1.1",
+    "@ipld/dag-json": "^10.1.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@orbisclub/components": "^0.1.63",
@@ -29,6 +30,7 @@
     "ipfs-core": "^0.15.4",
     "ipfs-http-client": "^59.0.0",
     "ipfs-provider": "^2.1.0",
+    "multiformats": "^11.0.2",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
