--- a/.env.testnet
+++ b/.env.testnet
@@ -6,3 +6,4 @@ NEXT_PUBLIC_ANNUALRATE = 0.1
 NEXT_PUBLIC_IPFS_GATEWAY = https://w3s.link
 NEXT_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://w3s.link
 NEXT_PUBLIC_IPFS_DELEGATE = "/dns4/ceramic-clay.geoweb.network/tcp/443/https"
+NEXT_PUBLIC_WS_RPC_URL=wss://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
