--- a/package.json
+++ b/package.json
@@ -5,38 +5,34 @@
   "dependencies": {
     "@apollo/client": "^3.7.16",
     "@augmented-worlds/system-babylonjs": "^0.1.15",
-    "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
-    "@ceramicnetwork/common": "^2.4.1",
-    "@ceramicnetwork/http-client": "^1.0.0",
-    "@ceramicnetwork/stream-tile": "^2.1.3",
-    "@geo-web/content": "^0.7.2",
+    "@geo-web/mud-world-base-client": "^0.0.10",
     "@geo-web/sdk": "^4.2.0",
     "@geo-web/types": "^0.2.0",
-    "@glazed/datamodel": "^0.3.1",
-    "@glazed/did-datastore": "^0.3.2",
-    "@glazed/did-session": "^0.1.1",
-    "@ipld/dag-json": "^10.1.0",
+    "@latticexyz/common": "2.0.0-next.5",
+    "@latticexyz/dev-tools": "2.0.0-next.5",
+    "@latticexyz/react": "2.0.0-next.5",
+    "@latticexyz/recs": "2.0.0-next.5",
+    "@latticexyz/schema-type": "2.0.0-next.5",
+    "@latticexyz/services": "2.0.0-next.5",
+    "@latticexyz/store-sync": "2.0.0-next.5",
+    "@latticexyz/utils": "2.0.0-next.5",
+    "@latticexyz/world": "2.0.0-next.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@orbisclub/components": "^0.1.63",
     "augmented-worlds": "^0.1.7",
     "bn.js": "^5.2.1",
     "bootstrap": "^5.2.3",
     "caip": "^1.1.0",
     "dotenv": "^16.0.3",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.0.27",
     "graphql": "^15.8.0",
-    "ipfs-core": "^0.15.4",
-    "ipfs-http-client": "^59.0.0",
-    "ipfs-provider": "^2.1.0",
     "multiformats": "^11.0.2",
-    "next": "^12.2.5",
+    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "sass": "^1.62.1",
-    "typescript": "^4.7.4",
+    "typescript": "5.1.6",
     "ua-parser-js": "^1.0.35"
   },
   "scripts": {
@@ -67,6 +63,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/debug": "^4.1.8",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.27",
