Working media gallery

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.7.16",
     "@augmented-worlds/system-babylonjs": "^0.1.15",
+    "@ensdomains/content-hash": "2.5.7",
     "@geo-web/mud-world-base-client": "^0.0.10",
     "@geo-web/sdk": "^4.2.0",
     "@geo-web/types": "^0.2.0",
+    "@google/model-viewer": "^3.2.1",
     "@latticexyz/common": "2.0.0-next.5",
     "@latticexyz/dev-tools": "2.0.0-next.5",
     "@latticexyz/react": "2.0.0-next.5",
@@ -32,6 +34,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "sass": "^1.62.1",
+    "three": "^0.156.1",
     "typescript": "5.1.6",
     "ua-parser-js": "^1.0.35"
   },
