--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@latticexyz/store-sync": "2.0.0-next.5",
     "@latticexyz/utils": "2.0.0-next.5",
     "@latticexyz/world": "2.0.0-next.5",
+    "@livepeer/react": "^2.8.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "augmented-worlds": "^0.1.7",
