--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@latticexyz/recs": "2.0.0-next.5",
     "@latticexyz/schema-type": "2.0.0-next.5",
     "@latticexyz/services": "2.0.0-next.5",
+    "@latticexyz/store": "^1.42.0",
     "@latticexyz/store-sync": "2.0.0-next.5",
     "@latticexyz/utils": "2.0.0-next.5",
     "@latticexyz/world": "2.0.0-next.5",
