Migrate to Vite

--- a/.env.mainnet
+++ b/.env.mainnet
@@ -1,8 +1,8 @@
-NEXT_PUBLIC_NETWORK_ID = 10
-NEXT_PUBLIC_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-subgraph
-NEXT_PUBLIC_CERAMIC_URI = https://ceramic.geoweb.network/
-NEXT_PUBLIC_CERAMIC_CONNECT_NETWORK = "mainnet"
-NEXT_PUBLIC_ANNUALRATE = 0.1
-NEXT_PUBLIC_IPFS_GATEWAY = https://w3s.link
-NEXT_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://w3s.link
-NEXT_PUBLIC_IPFS_DELEGATE = "/dns4/ceramic.geoweb.network/tcp/443/https"
+VITE_PUBLIC_NETWORK_ID = 10
+VITE_PUBLIC_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-subgraph
+VITE_PUBLIC_CERAMIC_URI = https://ceramic.geoweb.network/
+VITE_PUBLIC_CERAMIC_CONNECT_NETWORK = "mainnet"
+VITE_PUBLIC_ANNUALRATE = 0.1
+VITE_PUBLIC_IPFS_GATEWAY = https://w3s.link
+VITE_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://w3s.link
+VITE_PUBLIC_IPFS_DELEGATE = "/dns4/ceramic.geoweb.network/tcp/443/https"
