--- a/.env.testnet
+++ b/.env.testnet
@@ -1,10 +1,10 @@
-NEXT_PUBLIC_NETWORK_ID = 420
-NEXT_PUBLIC_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-testnet
-NEXT_PUBLIC_CERAMIC_URI = https://ceramic-clay.geoweb.network/
-NEXT_PUBLIC_CERAMIC_CONNECT_NETWORK = "testnet-clay"
-NEXT_PUBLIC_ANNUALRATE = 0.1
-NEXT_PUBLIC_IPFS_GATEWAY = https://w3s.link
-NEXT_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://w3s.link
-NEXT_PUBLIC_IPFS_DELEGATE = "/dns4/ceramic-clay.geoweb.network/tcp/443/https"
-NEXT_PUBLIC_WS_RPC_URL=wss://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
-NEXT_PUBLIC_LIVEPEER_API_KEY=8cdf71bd-3f27-46e8-991b-411a0f75b91f
+VITE_PUBLIC_NETWORK_ID = 420
+VITE_PUBLIC_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-testnet
+VITE_PUBLIC_CERAMIC_URI = https://ceramic-clay.geoweb.network/
+VITE_PUBLIC_CERAMIC_CONNECT_NETWORK = "testnet-clay"
+VITE_PUBLIC_ANNUALRATE = 0.1
+VITE_PUBLIC_IPFS_GATEWAY = https://w3s.link
+VITE_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://w3s.link
+VITE_PUBLIC_IPFS_DELEGATE = "/dns4/ceramic-clay.geoweb.network/tcp/443/https"
+VITE_PUBLIC_WS_RPC_URL=wss://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
+VITE_PUBLIC_LIVEPEER_API_KEY=8cdf71bd-3f27-46e8-991b-411a0f75b91f
