--- a/package.json
+++ b/package.json
@@ -6,20 +6,13 @@
     "@apollo/client": "^3.7.16",
     "@augmented-worlds/system-babylonjs": "^0.1.16",
     "@ensdomains/content-hash": "2.5.7",
-    "@geo-web/mud-world-base-client": "^0.0.10",
+    "@geo-web/mud-world-base-contracts": "^0.0.12",
+    "@geo-web/mud-world-base-setup": "0.0.2",
     "@geo-web/sdk": "^4.2.0",
     "@geo-web/types": "^0.2.0",
     "@google/model-viewer": "^3.2.1",
-    "@latticexyz/common": "2.0.0-next.5",
-    "@latticexyz/dev-tools": "2.0.0-next.5",
-    "@latticexyz/react": "2.0.0-next.5",
-    "@latticexyz/recs": "2.0.0-next.5",
-    "@latticexyz/schema-type": "2.0.0-next.5",
-    "@latticexyz/services": "2.0.0-next.5",
-    "@latticexyz/store": "^1.42.0",
-    "@latticexyz/store-sync": "2.0.0-next.5",
-    "@latticexyz/utils": "2.0.0-next.5",
-    "@latticexyz/world": "2.0.0-next.5",
+    "@latticexyz/react": "2.0.0-next.8",
+    "@latticexyz/recs": "2.0.0-next.8",
     "@livepeer/react": "^2.8.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -31,10 +24,10 @@
     "ethereum-blockies-base64": "^1.0.2",
     "graphql": "^15.8.0",
     "multiformats": "^11.0.2",
-    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "sass": "^1.62.1",
     "swiper": "^10.2.0",
     "three": "^0.156.1",
@@ -43,11 +36,10 @@
   },
   "scripts": {
     "dev-https": "local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 3001 --target 3000",
-    "dev": "next dev",
-    "build": "next build",
-    "export": "next export",
-    "start": "next start",
-    "lint": "next lint",
+    "build": "vite build",
+    "dev": "vite --mode testnet",
+    "preview": "vite preview",
+    "test": "tsc --noEmit",
     "prettier": "prettier -w src/**"
   },
   "browserslist": {
@@ -75,10 +67,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/ua-parser-js": "^0.7.36",
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "local-ssl-proxy": "^1.3.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "vite": "^4.4.9"
   }
 }
