feat: sync with zustand

--- a/.env.testnet
+++ b/.env.testnet
@@ -1,11 +1,12 @@
-VITE_PUBLIC_NETWORK_ID = 420
-VITE_PUBLIC_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-testnet
-VITE_PUBLIC_CERAMIC_URI = https://ceramic-clay.geoweb.network/
-VITE_PUBLIC_CERAMIC_CONNECT_NETWORK = "testnet-clay"
-VITE_PUBLIC_ANNUALRATE = 0.1
-VITE_PUBLIC_IPFS_GATEWAY = https://w3s.link
-VITE_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://w3s.link
-VITE_PUBLIC_IPFS_DELEGATE = "/dns4/ceramic-clay.geoweb.network/tcp/443/https"
-VITE_PUBLIC_WS_RPC_URL=wss://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
-VITE_PUBLIC_HTTP_RPC_URL=https://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
-VITE_PUBLIC_LIVEPEER_API_KEY=8cdf71bd-3f27-46e8-991b-411a0f75b91f
+VITE_NETWORK_ID = 420
+VITE_WORLD_ADDRESS = 0x3904285496739BF5030d79C0CF259A569806F759
+VITE_WORLD_BLOCK_NUMBER = 17280426
+VITE_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-testnet
+VITE_CERAMIC_URI = https://ceramic-clay.geoweb.network/
+VITE_CERAMIC_CONNECT_NETWORK = "testnet-clay"
+VITE_ANNUALRATE = 0.1
+VITE_IPFS_GATEWAY = https://ipfs.io
+VITE_IPFS_DELEGATE = "/dns4/ceramic-clay.geoweb.network/tcp/443/https"
+VITE_WS_RPC_URL=wss://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
+VITE_HTTP_RPC_URL=https://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
+VITE_LIVEPEER_API_KEY=8cdf71bd-3f27-46e8-991b-411a0f75b91f
