--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
-  "extends": ["next", "prettier"],
+  "extends": ["react-app", "prettier"],
   "rules": {
     "react-hooks/exhaustive-deps": "off",
-    "@next/next/no-img-element": "off",
     "react/no-unescaped-entities": "off"
   }
 }
