--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,11 @@ jobs:
         env:
           CI: true
 
+      - name: Lint
+        run: yarn lint
+        env:
+          CI: true
+
       - name: Build
         run: yarn build
         env:
