--- a/.gitignore
+++ b/.gitignore
@@ -8,23 +8,18 @@
 # testing
 /coverage
 
-# Next.js build output
-/.next
-
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
 .envrc
 .direnv
-
 *.pem
-
 dist/
+tsconfig.tsbuildinfo
+.vercel
