--- a/.env.mainnet
+++ b/.env.mainnet
@@ -1,8 +1,10 @@
-NEXT_PUBLIC_NETWORK_ID = 10
-NEXT_PUBLIC_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-subgraph
-NEXT_PUBLIC_CERAMIC_URI = https://ceramic.geoweb.network/
-NEXT_PUBLIC_CERAMIC_CONNECT_NETWORK = "mainnet"
-NEXT_PUBLIC_ANNUALRATE = 0.1
-NEXT_PUBLIC_IPFS_GATEWAY = https://w3s.link
-NEXT_PUBLIC_MODEL_VIEWER_IPFS_GATEWAY = https://w3s.link
-NEXT_PUBLIC_IPFS_DELEGATE = "/dns4/ceramic.geoweb.network/tcp/443/https"
+VITE_NETWORK_ID = 10
+VITE_WORLD_ADDRESS =
+VITE_WORLD_BLOCK_NUMBER =
+VITE_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-subgraph
+VITE_ANNUALRATE = 0.1
+VITE_IPFS_GATEWAY = https://ipfs.io
+VITE_IPFS_DELEGATE = "/dns4/ceramic.geoweb.network/tcp/443/https"
+VITE_WS_RPC_URL=wss://opt.mainnet.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
+VITE_HTTP_RPC_URL=https://opt.mainnet.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
+VITE_LIVEPEER_API_KEY=8cdf71bd-3f27-46e8-991b-411a0f75b91f
