--- a/package.json
+++ b/package.json
@@ -4,40 +4,41 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.16",
-    "@ceramicnetwork/blockchain-utils-linking": "^2.0.7",
-    "@ceramicnetwork/common": "^2.4.1",
-    "@ceramicnetwork/http-client": "^1.0.0",
-    "@ceramicnetwork/stream-tile": "^2.1.3",
-    "@geo-web/content": "^0.7.2",
-    "@geo-web/sdk": "^4.2.0",
+    "@augmented-worlds/system-babylonjs": "^0.1.16",
+    "@ensdomains/content-hash": "2.5.7",
+    "@geo-web/mud-world-base-contracts": "0.1.0",
+    "@geo-web/mud-world-base-setup": "0.1.0",
+    "@geo-web/sdk": "^4.3.3",
     "@geo-web/types": "^0.2.0",
-    "@glazed/datamodel": "^0.3.1",
-    "@glazed/did-datastore": "^0.3.2",
-    "@glazed/did-session": "^0.1.1",
+    "@google/model-viewer": "^3.2.1",
+    "@livepeer/react": "^2.8.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@orbisclub/components": "^0.1.63",
+    "augmented-worlds": "^0.1.7",
     "bn.js": "^5.2.1",
+    "bootstrap": "^5.2.3",
     "caip": "^1.1.0",
     "dotenv": "^16.0.3",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.0.27",
     "graphql": "^15.8.0",
-    "ipfs-core": "^0.15.4",
-    "ipfs-http-client": "^59.0.0",
-    "ipfs-provider": "^2.1.0",
-    "next": "^12.2.5",
+    "multiformats": "^11.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "typescript": "^4.7.4"
+    "react-router-dom": "^6.16.0",
+    "sass": "^1.62.1",
+    "swiper": "^10.2.0",
+    "three": "^0.156.1",
+    "typescript": "5.1.6",
+    "ua-parser-js": "^1.0.35"
   },
   "scripts": {
     "dev-https": "local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 3001 --target 3000",
-    "dev": "next dev",
-    "build": "next build",
-    "export": "next export",
-    "start": "next start",
-    "lint": "next lint",
+    "build": "vite build --mode $APP_ENV",
+    "dev": "vite --mode $APP_ENV",
+    "preview": "vite preview",
+    "test": "tsc --noEmit",
+    "lint": "eslint src",
     "prettier": "prettier -w src/**"
   },
   "browserslist": {
@@ -56,17 +57,23 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/debug": "^4.1.8",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/ua-parser-js": "^0.7.36",
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "local-ssl-proxy": "^1.3.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "vite": "^4.4.9",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
