feat: move to op-sepolia

--- a/.env.testnet
+++ b/.env.testnet
@@ -1,10 +1,7 @@
-VITE_NETWORK_ID = 420
-VITE_WORLD_ADDRESS = 0x3904285496739BF5030d79C0CF259A569806F759
-VITE_WORLD_BLOCK_NUMBER = 17280426
-VITE_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-testnet
+VITE_NETWORK_ID = 11155420
+VITE_WORLD_ADDRESS = 0x943e0b3F1926008f2e1bEFCBc55FA2A75CeC2452
+VITE_WORLD_BLOCK_NUMBER = 6992231
 VITE_ANNUALRATE = 0.1
 VITE_IPFS_GATEWAY = https://ipfs.io
 VITE_IPFS_DELEGATE = "/dns4/ceramic-clay.geoweb.network/tcp/443/https"
-VITE_WS_RPC_URL=wss://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
-VITE_HTTP_RPC_URL=https://opt-goerli.g.alchemy.com/v2/Y4RuzHDAmcqDnO6iqLcfwDzmbTk4xHob
 VITE_LIVEPEER_API_KEY=8cdf71bd-3f27-46e8-991b-411a0f75b91f
