build: update env vars

--- a/.env.mainnet
+++ b/.env.mainnet
@@ -3,5 +3,5 @@ VITE_WORLD_ADDRESS =
 VITE_WORLD_BLOCK_NUMBER =
 VITE_GRAPH_URI = https://api.thegraph.com/subgraphs/name/geo-web-project/geo-web-subgraph
 VITE_ANNUALRATE = 0.1
-VITE_IPFS_GATEWAY = https://ipfs.io
+VITE_IPFS_GATEWAY = https://gateway.ipfs.io
 VITE_LIVEPEER_API_KEY=8cdf71bd-3f27-46e8-991b-411a0f75b91f
