--- a/.env.testnet
+++ b/.env.testnet
@@ -1,6 +1,7 @@
 VITE_NETWORK_ID = 11155420
 VITE_WORLD_ADDRESS = 0x943e0b3F1926008f2e1bEFCBc55FA2A75CeC2452
 VITE_WORLD_BLOCK_NUMBER = 6992231
+VITE_GRAPH_URI = https://api.studio.thegraph.com/query/51953/geo-web-op-sepolia/version/latest
 VITE_ANNUALRATE = 0.1
-VITE_IPFS_GATEWAY = https://ipfs.io
+VITE_IPFS_GATEWAY = https://gateway.ipfs.io
 VITE_LIVEPEER_API_KEY=8cdf71bd-3f27-46e8-991b-411a0f75b91f
