--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@apollo/client": "^3.7.16",
     "@augmented-worlds/system-babylonjs": "^0.1.16",
     "@ensdomains/content-hash": "2.5.7",
-    "@geo-web/mud-world-base-contracts": "0.1.0",
-    "@geo-web/mud-world-base-setup": "0.1.2",
+    "@geo-web/mud-world-base-contracts": "0.2.0",
+    "@geo-web/mud-world-base-setup": "0.3.1",
     "@geo-web/sdk": "^4.4.0",
     "@geo-web/types": "^0.2.0",
     "@google/model-viewer": "^3.2.1",
@@ -43,7 +43,11 @@
     "prettier": "prettier -w src/**"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       ">0.2%",
       "not dead",
